# yt-transcript

./: LICENSE  README.md  pyproject.toml
src/audio_transcribe_translate/: __init__.py  __main__.py  audio.py  captions.py  cli.py  config.py  formatters.py  input_resolver.py  io.py  models.py  runtime.py  transcribe.py  url_parser.py
src/yt_transcript/: __init__.py  __main__.py  audio.py  captions.py  cli.py  config.py  errors.py  formatters.py  io.py  models.py  transcribe.py  url_parser.py
tests/: test_cli.py  test_formatters.py  test_input_resolver.py  test_io.py  test_runtime.py  test_transcribe.py  test_url_parser.py
