[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-transcript"
version = "0.1.0"
description = "YouTube transcript CLI with captions-first and local STT fallback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.2.1",
  "pydantic>=2.11.0",
  "rich>=14.0.0",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "typer>=0.16.0",
  "youtube-transcript-api>=1.1.0",
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[project.scripts]
yt-transcript = "yt_transcript.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
