[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-transcribe-translate"
version = "0.1.0"
description = "CLI for audio transcription workflows with captions-first YouTube handling and local STT fallback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.2.1",
  "pydantic>=2.11.0",
  "rich>=14.0.0",
  "typer>=0.16.0",
  "youtube-transcript-api>=1.1.0",
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[project.scripts]
att = "audio_transcribe_translate.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/audio_transcribe_translate"]

[tool.ruff]
line-length = 100
target-version = "py311"
